[package]
name = "take_home_test"
version = "0.1.0"
authors = ["khadeem dacosta <khadeem.dacosta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.117" , features =["derive"]}
bincode = "1.3.1"
chrono = "0.4.19"
lru = "0.6.0"
httparse = "1.3.4"
http = "0.2.1"